--- a/package.json
+++ b/package.json
@@ -2,8 +2,16 @@
   "name": "portfoilo_two",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jjrajani.github.io/react_portfolio",
+  "homepage": "https://jjrajani.github.io/portfolio",
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "deploy": "npm run build&&gh-pages -d build"
+  },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "node-sass": "^4.5.3",
     "react-scripts": "1.0.7",
     "sass-loader": "^6.0.5"
@@ -13,11 +21,5 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router-dom": "^4.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
   }
 }
