--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "portfoilo_two",
-  "version": "0.1.0",
-  "private": true,
-  "homepage": "https://jjrajani.github.io/portfolio",
+  "version": "0.2.0",
+  "private": false,
+  "homepage": "https://jjrajani.github.io/portfolio/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
