--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfoilo_two",
   "version": "0.2.0",
   "private": false,
-  "homepage": "https://github.com/jjrajani/teshasrouter",
+  "homepage": "https://jjrajani.github.io/teshaasrouter",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
